// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`trailingComma.notjson - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;

exports[`trailingComma.notjson - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  k1: "v1",
  k2: "v2",
  k3: "v3",
}

================================================================================
`;

exports[`trailingComma.notjson - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;

exports[`trailingComma.notjson - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  k1: "v1",
  k2: "v2",
  k3: "v3",
}

================================================================================
`;

exports[`trailingComma.notjson format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;
